# dbldatagen

./: .build-constraints.txt  .codegen.json  .coveragerc  .coveragerc-all  .coveragerc-core  .coveragerc-v1  .gitignore  .lgtm.yml  .readthedocs.yaml  APIDOCS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  CPG_supply_chain_datagen.py  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  NOTICE  PULL_REQUEST_TEMPLATE.md  Pipfile  README.md  RELEASE_NOTES.md  V1_ANNOUNCEMENT.md  codecov.yml  dev_makefile  lint.sh  makefile  prospector.yaml  pydantic_compat.md  pyproject.toml  pytest.ini  scratch.md  setup.cfg  setup.py  test.txt  uv.toml
.github/: CODEOWNERS  codecov.yml  dependabot.yml
.github/workflows/: codeql-analysis.yml  docs.yml  no-cheat.yml  onrelease.yml  push.yml  push_develop.yml  push_develop2.yml  release.yml  test_code_coverage_publication.yml
databricks_datagen/: column_generation_spec.py  column_spec_options.py  data_generator.py
databrickslabs_testdatagenerator/: __init__.py  _version.py  column_generation_spec.py  column_spec_options.py  data_analyzer.py  data_generator.py  datarange.py  dataranges.py  daterange.py  distributions.py  function_builder.py  nrange.py  preconditions.py  schema_parser.py  spark_singleton.py  text_generators.py  utils.py
databrickslabs_testdatagenerator/distributions/: __init__.py  beta.py  data_distribution.py  distributions.py  exponential_distribution.py  gamma.py  normal_distribution.py
dbldatagen/: __init__.py  _version.py  column_generation_spec.py  column_spec_options.py  config.py  data_analyzer.py  data_generator.py  datagen_constants.py  datagen_logger.py  datagen_types.py  datarange.py  datasets.py  datasets_object.py  daterange.py  enhanced_event_time.py  function_builder.py  generation_model.py  html_utils.py  multi_table_builder.py  nrange.py  relation.py  schema_parser.py  serialization.py  spark_singleton.py  text_generatestring.py  text_generator_plugins.py  text_generators.py  text_randomstr.py  type_utils.py  types.py  utils.py  value_based_prng.py
dbldatagen/constraints/: __init__.py  chained_relation.py  constraint.py  literal_range_constraint.py  literal_relation_constraint.py  negative_values.py  positive_values.py  ranged_values_constraint.py  sql_expr.py  unique_combinations.py
dbldatagen/core/: __init__.py  api.py
dbldatagen/datasets/: __init__.py  basic_configurable_cardinality.py  basic_geometries.py  basic_iot.py  basic_process_historian.py  basic_stock_ticker.py  basic_telematics.py  basic_user.py  benchmark_groupby.py  dataset_provider.py  json_device_status.py  multi_table_sales_order_provider.py  multi_table_telephony_provider.py  streaming_late_arriving_iot.py
dbldatagen/distributions/: __init__.py  beta.py  data_distribution.py  exponential_distribution.py  gamma.py  normal_distribution.py
dbldatagen/extensions/: __init__.py  data_generator_from_spec.py  datagen_spec.py  errors.py
dbldatagen/spec/: __init__.py  column_spec.py  compat.py  generator.py  generator_spec.py  generator_spec_impl.py  output_targets.py  validation.py
dbldatagen/v1/: __init__.py  cdc.py  cdc_dsl.py  cdc_schema.py  compat.py  dsl.py  ingest.py  ingest_schema.py  schema.py  validation.py
docs/: APIDOCS.md  DATARANGES.md  DISTRIBUTIONS.md  MIGRATION_V0_TO_CORE.md  MIGRATION_V0_TO_V1.md  Makefile  TEXTDATA.md  USING_THE_APIS.md  index.html  intro.md
docs/core/: README.md  api-reference.md  distributions.md  getting-started.md  limitations.md  loading-plans.md  nullable-and-dirty-data.md  persisting-output.md  troubleshooting.md
docs/dbldatagen/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/public_docs/: .buildinfo  APIDOCS.html  DATARANGES.html  DISTRIBUTIONS.html  TOBEADDED.html  extending_text_generation.html  generating_cdc_data.html  generating_column_data.html  generating_from_existing_data.html  generating_json_data.html  genindex.html  index.html  installation_notes.html  license.html  multi_table_data.html  objects.inv  options_and_features.html  py-modindex.html  repeatable_data_generation.html  search.html  searchindex.js  textdata.html  (+5 more)
examples/: example1.py  example2.py  example3.py  example4.py  example5.py  example6.py  financial_services_datagen_demo.py  healthcare_datagen_demo.py  manufacturing_datagen_demo.py
notes/: future-work.md
python/: .bumpversion.cfg  dev_require.txt  dev_require_321.txt  pydoc.cfg  require.txt  setup.cfg  setup.py
tests/: __init__.py  test_array_columns.py  test_basic_test.py  test_build_planning.py  test_columnGenerationSpec.py  test_complex_columns.py  test_constraints.py  test_data_generation_plugins.py  test_datagen_specs.py  test_datasets.py  test_datasets_with_specs.py  test_dataspec_generator.py  test_dependent_data.py  test_distributions.py  test_generation_from_config.py  test_generation_from_data.py  test_generator_spec_impl.py  test_html_utils.py  test_iltext_generation.py  test_large_schema.py  test_logging.py  test_multi_table.py  test_options.py  test_output.py  test_pandas_integration.py  test_quick_tests.py  test_ranged_values_and_dates.py  test_ranges.py  test_repeatable_data.py  test_schema_parser.py  test_scriptiing.py  test_scripting.py  test_serialization.py  test_serverless.py  test_shared_env.py  test_spark_singleton.py  test_spec.py  test_spec_compat.py  test_spec_generator_spec.py  test_spec_init.py  (+17 more)
tutorial/: 0-Help.py  1-Basics.py  1-Introduction.py  2-Basics.py  3-ChangeDataCapture-example.py  4-Generating-multi-table-data.py  README.md
unit_tests/: __init__.py  basic_test.py  basic_test2.py  large_schema_test.py  test_basic_test.py  test_basic_test2.py  test_build_planning.py  test_columnGenerationSpec.py  test_dates.py  test_dependent_data.py  test_distributions.py  test_iltext_generation.py  test_large_schema.py  test_options.py  test_pandas_integration.py  test_quick_tests.py  test_ranged_values_and_dates.py  test_schema_parser.py  test_scriptiing.py  test_streaming.py  test_text_generation.py  test_topological_sort.py  test_types.py  test_unit_test1.py  test_utils.py  test_weights.py  unit_tests1.py
(+629 files in other folders)
